# seqrepo-rest-service

./: .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  README.rst  __main__.py  app.py  application.py  cron.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  start.sh  threadglobals.py  tox.ini
.ebextensions/: 01_download_data.config
.github/workflows/: build-and-push-image.yml  python-package.yml
app/refget/: __main__.py  refget-openapi.yaml
codebuild/: deploy_eb_env.py  deploy_eb_env_dev.py  terminate_eb_env.py  terminate_eb_env_dev.py
misc/: load-test.py
sbin/: rename-package
seqrepo/routes/: metadata.py  ping.py  sequence.py
seqrepo_rest_service/: __main__.py  threadglobals.py
seqrepo_rest_service/refget/: refget-openapi.yaml
seqrepo_rest_service/refget/routes/: metadata.py  sequence.py  serviceInfo.py
seqrepo_rest_service/seqrepo/: openapi.yaml
seqrepo_rest_service/seqrepo/routes/: metadata.py  ping.py  sequence.py
src/app/: __main__.py  threadglobals.py
src/app/refget/: globals.py  refget-openapi.yaml  utils.py
src/app/refget/routes/: metadata.py  sequence.py  serviceInfo.py
src/seqrepo_rest/refget/: refget-openapi.yaml
src/seqrepo_rest_service/: __main__.py  cli.py  threadglobals.py  utils.py
src/seqrepo_rest_service/refget/: refget-openapi.yaml
src/seqrepo_rest_service/refget/routes/: metadata.py  sequence.py  serviceInfo.py
src/seqrepo_rest_service/seqrepo/: openapi.yaml
src/seqrepo_rest_service/seqrepo/routes/: metadata.py  ping.py  sequence.py
tests/data/seqrepo/master/: aliases.sqlite3
tests/data/seqrepo/master/sequences/: db.sqlite3
tests/data/seqrepo/master/sequences/2019/0520/1540/: 1558366827.9243503.fa.bgz  1558366827.9243503.fa.bgz.fai  1558366827.9243503.fa.bgz.gzi  1558366831.7744648.fa.bgz  1558366831.7744648.fa.bgz.fai  1558366834.1231377.fa.bgz  1558366834.1231377.fa.bgz.fai  1558366834.1231377.fa.bgz.gzi
