[options]
include_package_data = True
packages = find_namespace:
package_dir =
    = src
zip_safe = True

install_requires =
    biocommons.seqrepo>=0.6.2
    coloredlogs
    connexion[swagger-ui]>=2.2

[options.extras_require]
dev =
    bandit~=1.7
    black~=22.3
    build~=0.8
    flake8~=4.0
    ipython~=8.4
    isort~=5.10
    mypy
    pylint~=2.14
    pytest-cov~=4.1
    pytest-optional-tests
    pytest~=7.1
    wheel
    vcrpy
docs = 
    mkdocs

[options.entry_points]
console_scripts =
    seqrepo-rest-service = seqrepo_rest_service.cli:main

[options.packages.find]
where = src
exclude =
    __pycache__
    *.pyc

[options.package_data]
* = *.gz, *.json, *.yaml

[flake8]
ignore = E129,E133,E203,E221,E241,E251,E303,E266,H106,H904,W291
max-line-length = 100
max-complexity = 15
hang-closing = true
exclude =
    .eggs
    build
    dist
    docs/conf.py
    tests/*

[tool:pytest]
addopts = --cov-config=setup.cfg --cov-report term-missing  --doctest-modules --doctest-glob='*.rst'  --strict
collect_ignore = setup.py
doctest_optionflags = ALLOW_UNICODE ALLOW_BYTES ELLIPSIS IGNORE_EXCEPTION_DETAIL NORMALIZE_WHITESPACE
norecursedirs = _data
testpaths = tests
markers =
  network
  vcr

